refactor: update menu action resource module fields
