# internal/app/swagger/swagger.json
@@ -2317,6 +2317,11 @@
                     "description": "父级路径",
                     "type": "string"
                 },
+                "resources": {
+                    "description": "资源列表",
+                    "type": "object",
+                    "$ref": "#/definitions/schema.MenuResources"
+                },
                 "routeName": {
                     "description": "路由名称",
                     "type": "string"
@@ -2376,10 +2381,6 @@
         },
         "schema.MenuActionResource": {
             "type": "object",
-            "required": [
-                "method",
-                "path"
-            ],
             "properties": {
                 "actionId": {
                     "description": "菜单动作ID",
@@ -2389,12 +2390,8 @@
                     "description": "唯一标识",
                     "type": "string"
                 },
-                "method": {
-                    "description": "资源请求方式(支持正则)",
-                    "type": "string"
-                },
-                "path": {
-                    "description": "资源请求路径（支持/:id匹配）",
+                "resourceId": {
+                    "description": "资源ID",
                     "type": "string"
                 }
             }
@@ -2444,6 +2441,11 @@
                     "description": "父级ID",
                     "type": "string"
                 },
+                "resources": {
+                    "description": "资源列表",
+                    "type": "object",
+                    "$ref": "#/definitions/schema.MenuResources"
+                },
                 "routeName": {
                     "description": "路由名称",
                     "type": "string"
@@ -2464,6 +2466,32 @@
                     "description": "状态(1:启用 2:禁用)",
                     "type": "integer"
                 }
+            }
+        },
+        "schema.MenuResource": {
+            "type": "object",
+            "required": [
+                "menuId"
+            ],
+            "properties": {
+                "id": {
+                    "description": "唯一标识",
+                    "type": "string"
+                },
+                "menuId": {
+                    "description": "菜单ID",
+                    "type": "string"
+                },
+                "resourceId": {
+                    "description": "资源ID",
+                    "type": "string"
+                }
+            }
+        },
+        "schema.MenuResources": {
+            "type": "array",
+            "items": {
+                "$ref": "#/definitions/schema.MenuResource"
             }
         },
         "schema.MenuTree": {
@@ -2502,6 +2530,11 @@
                 "parentPath": {
                     "description": "父级路径",
                     "type": "string"
+                },
+                "resources": {
+                    "description": "资源列表",
+                    "type": "object",
+                    "$ref": "#/definitions/schema.MenuResources"
                 },
                 "routeName": {
                     "description": "路由名称",
@@ -2548,7 +2581,7 @@
                     "type": "string"
                 },
                 "description": {
-                    "description": "接口描述",
+                    "description": "资源描述",
                     "type": "string"
                 },
                 "group": {
@@ -2582,7 +2615,7 @@
             ],
             "properties": {
                 "description": {
-                    "description": "接口描述",
+                    "description": "资源描述",
                     "type": "string"
                 },
                 "group": {
